plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.jdh'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }   // Spring AI 2.x milestone
}

dependencyManagement {
	imports {
		mavenBom 'org.springframework.ai:spring-ai-bom:2.0.0-M4'
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'

	// Spring AI - Chat + Embedding (OpenAI)
	implementation 'org.springframework.ai:spring-ai-starter-model-openai'

	// Spring AI - PGVector VectorStore
	implementation 'org.springframework.ai:spring-ai-starter-vector-store-pgvector'

	// Spring AI - Apache Tika 기반 문서 로더 (PDF, HTML, DOCX 등)
	implementation 'org.springframework.ai:spring-ai-tika-document-reader'

	// Spring Data JPA (PgKeywordSearchAdapter, PgSearchLogAdapter 에서 JPA 사용)
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// PostgreSQL JDBC 드라이버 (PGobject 사용을 위해 implementation)
	implementation 'org.postgresql:postgresql'

	// Jackson 3.x (SearchLogger JSON 직렬화) - Spring Boot 4.x 관리 버전
	implementation 'tools.jackson.core:jackson-databind'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.mockito:mockito-core'
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += ['--enable-preview']
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs '--enable-preview'
}

tasks.named('bootRun') {
	jvmArgs '--enable-preview'
}
